2013-05-21  wolf  <coyocanid@gmail.com>

	* VERSION 0.0991
	* split logging into io, error and access

2013-05-19  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0989
	* fixed utf-8 encoding bug
	* used perlcritic and followed some suggestions

2013-05-14  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0987
	* fixed bug in storing sqlite file location

2013-05-13  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0986 ( had not CPAN'd this version yet )
	* fixed serious webserver bug where query parameters were being misinterpreted.

2013-05-11  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0987
	* fixed bug where http_referer was not being read correctly
	* fixed bug in Yote.pm where the first time Yote was launched, it wouldn't start.
	* moved SQLite data file to yote root directory in Yote.pm 

2013-05-10  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0985
	* added is_root method to accounts.
	* updated web pages
	* email parameter now optional for account creation
	* files are now read much faster ( this includes serving up the web pages )
	* updated version of javascript files
	* include author in html files

2013-05-02  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0982
	* fixed javascript bug where disabled fields were not being reenabled after call.

2013-05-01  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0981
	* first account created by user is no longer automatically root
	* root account is part of the configuration, which saves a hashed password
	* root account is created automatically and its password aligned with what is in the configuration file.
	* sync_all is now attached to the Yote::Obj base class and is thus available to all
	* encrypt_pass second argument is now a handle strong, not a Yote::Login object
	* Server return header set to 'Yote'
	* Serves rather than referrs index.html pages.

2013-04-27  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0980